--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.19",
-    "@mui/material": "^5.14.20",
+    "@mui/material": "^5.15.0",
     "@mui/styled-engine-sc": "^6.0.0-alpha.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -31,6 +31,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
     "typescript": "^5.2.2",
-    "vite": "^5.0.0"
+    "unplugin-fonts": "^1.1.1",
+    "vite": "^4.5.1",
+    "vite-plugin-fonts": "^0.7.0"
   }
 }
