--- a/JenkinsFile
+++ b/JenkinsFile
@@ -4,7 +4,7 @@ pipeline {
         stage('Checkout') {
             steps {
                 script {
-                    git branch: 'main', url: 'https://github.com/danibuia/Tracking-Wisdom.git'
+                    git branch: 'master', url: 'https://github.com/danibuia/Tracking-Wisdom.git'
                 }
             }
         }
