--- a/JenkinsFile
+++ b/JenkinsFile
@@ -2,13 +2,13 @@
 pipeline {
     agent any
     stages {
-        stage('Checkout') {
-            steps {
-                script {
-                    git branch: 'master', url: 'https://github.com/danibuia/Tracking-Wisdom.git'
-                }
-            }
-        }
+        // stage('Checkout') {
+        //     steps {
+        //         script {
+        //             git branch: 'master', url: 'https://github.com/danibuia/Tracking-Wisdom.git'
+        //         }
+        //     }
+        // }
 
         stage('Install Dependencies') {
             steps {
