--- a/JenkinsFile
+++ b/JenkinsFile
@@ -15,10 +15,10 @@ pipeline {
             steps {
                 script {
                     // Install Yarn
-                    sh 'npm install -g yarn'
+                    bat 'npm install -g yarn'
 
                     // Install project dependencies
-                    sh 'yarn install'
+                    bat 'yarn install'
                 }
             }
         }
@@ -26,7 +26,7 @@ pipeline {
         stage('Linting') {
             steps {
                 script {
-                    sh 'yarn lint'
+                    bat 'yarn lint'
                 }
             }
         }
@@ -34,7 +34,7 @@ pipeline {
         stage('Build') {
             steps {
                 script {
-                    sh 'yarn build'
+                    bat 'yarn build'
                 }
             }
         }
@@ -42,7 +42,7 @@ pipeline {
         stage('Testing') {
             steps {
                 script {
-                    sh 'yarn test'
+                    bat 'yarn test'
                 }
             }
         }
