--- a/JenkinsFile
+++ b/JenkinsFile
@@ -16,6 +16,7 @@ pipeline {
                 script {
                     // Install Yarn
                     bat 'npm install -g yarn'
+                    bat 'yarn -v'
 
                     // Install project dependencies
                     bat 'yarn install'
