--- a/JenkinsFile
+++ b/JenkinsFile
@@ -10,7 +10,13 @@ pipeline {
                 }
             }
         }
-        
+
+            // Use the globally installed Yarn binary
+            def yarnPath = bat(script: 'yarn global bin', returnStatus: true).trim()
+
+            // Install project dependencies
+            bat "${yarnPath}\\yarn install"
+
         stage('Linting') {
             steps {
                 script {
